added fname and lname columns for Users in controller, test_controller, fixture and jbuilder

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,10 +2,14 @@
 
 one:
   user_name: MyString
+  user_fname: MyString
+  user_lname: MyString
   user_email: MyString
   password_digest: MyString
 
 two:
   user_name: MyString
+  user_fname: MyString
+  user_lname: MyString
   user_email: MyString
   password_digest: MyString
