--- a/test/fixtures/carted_jobs.yml
+++ b/test/fixtures/carted_jobs.yml
@@ -4,8 +4,12 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+one:
+  user: one
+  job: one
+  company: one
 #
-two: {}
-# column: value
+two:
+  user: two
+  job: two
+  company: two
